--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -8,8 +8,8 @@ on:
 
 env:
   REGISTRY: registry.cn-hangzhou.aliyuncs.com
-  ALIYUN_REGISTRY_USER: "cwlhmm"
-  ALIYUN_REGISTRY_PASSWORD: "lmm970820"
+  ALIYUN_REGISTRY_USER: ""
+  ALIYUN_REGISTRY_PASSWORD: ""
   MM_NOTIFY_URL: "${{ secrets.MM_NOTIFY_URL }}"
 
 jobs:
